Fixed height paginated table
* paginated tables now get fixed height
* scroll fixed columns if presence along with standard columns
* move viewport checker inside of table to ensure proper behavior
* set fixed-width.fixed-height tables to 400px and remove scrollbars
* add example

--- a/app/styles/justa-table/_justa-table-structure.scss
+++ b/app/styles/justa-table/_justa-table-structure.scss
@@ -41,6 +41,11 @@
 
   .table-columns {
     overflow: auto;
+    &.fixed-height {
+      overflow-x: scroll;
+      overflow-y: scroll;
+      height: 500px;
+    }
   }
 
   .fixed-table-columns {
@@ -48,6 +53,13 @@
       // we have to set this to something, choose default 1 column width.
       // expected that fixed columns have set widths which will override this
       // width: 100px;
+    }
+    &.fixed-height {
+      float: left;
+      width: 400px;
+      overflow-y: hidden;
+      overflow-x: hidden;
+      height: 500px;
     }
   }
 
